--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <!-- ***** All CSS Files ***** -->
 
     <!-- Style css -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Gameon - Metaverse IGO Launchpad React Template</title>
+    <title>Ridge DEX - Web 3.0 platform for NFT and DEFI</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
