moved components to activeComponents

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ridge DEX - Web 3.0 platform for NFT and DEFI</title>
+    <title>RidgeSwap DEX - Web 3.0 platform for NFT and DEFI</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
